feat(order): implement order creation endpoint with integration tests